Project

General

Profile

Actions

Bug #20971

closed

rgw opslog didn't compatible with s3

Added by Jiaying Ren over 6 years ago. Updated about 6 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

rgw opslog uri didn't record the query string and http version,which didn't match AWS S31:

root@ceph-node1# (git::fix-full-uri) curl -v -X GET 'http://localhost:8000/111/666666666666666666666?id=3'

root@ceph-node1# (git::fix-full-uri) ./bin/radosgw-admin -c ceph.conf log show --object=2017-08-10-16-8795f271-b4aa-4f30-8602-55b6daf1f523.4106.1-111

{
"bucket": "111",
"time": "2017-08-10 08:20:10.168400Z",
"time_local": "2017-08-10 16:20:10.168400",
"remote_addr": "",
"user": "anonymous",
"operation": "GET",
"uri": "/111/666666666666666666666",
"http_status": "403",
"error_code": "AccessDenied",
"bytes_sent": 213,
"bytes_received": 0,
"object_size": 0,
"total_time": 1568719,
"user_agent": "curl/7.29.0",
"referrer": ""
}

[1] http://docs.aws.amazon.com/AmazonS3/latest/dev/LogFormat.html Section Request-URI


Related issues 1 (0 open1 closed)

Copied to Ceph - Backport #22622: luminous: rgw opslog didn't compatible with s3 ResolvedCasey BodleyActions
Actions #1

Updated by Jiaying Ren over 6 years ago

Fixed:

root@ceph-node1# (git::fix-full-uri) ./bin/radosgw-admin -c ceph.conf log {
"bucket_id": "8795f271-b4aa-4f30-8602-55b6daf1f523.4106.1",
"bucket_owner": "testid",
"bucket": "111",
"log_entries": [ {
"
}, {
"bucket": "111",
"time": "2017-08-10 08:20:10.168400Z",
"time_local": "2017-08-10 16:20:10.168400",
"remote_addr": "",
"user": "anonymous",
"operation": "GET",
"uri": "GET /111/666666666666666666666?id=3 HTTP/1.1",
"http_status": "403",
"error_code": "AccessDenied",
"bytes_sent": 213,
"bytes_received": 0,
"object_size": 0,
"total_time": 1568719,
"user_agent": "curl/7.29.0",
"referrer": ""
}
],
"log_sum": {
"bytes_sent": 213,
"bytes_received": 0,
"total_time": 3749027,
"total_entries": 2
}
}

https://github.com/ceph/ceph/pull/16958

Actions #2

Updated by Jos Collin over 6 years ago

  • Status changed from New to In Progress
Actions #3

Updated by Yuri Weinstein over 6 years ago

Jiaying Ren wrote:

https://github.com/ceph/ceph/pull/16958

merged

Actions #4

Updated by Casey Bodley over 6 years ago

  • Status changed from In Progress to Pending Backport
  • Backport set to luminous
Actions #5

Updated by Casey Bodley over 6 years ago

  • Copied to Backport #22622: luminous: rgw opslog didn't compatible with s3 added
Actions #6

Updated by Nathan Cutler about 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF