rgw: fix opslog uri as per Amazon s3

According to s3[1], current Request-URI opslog entry are missing:

+ request method
+ query string
+ http version number

[1] http://docs.aws.amazon.com/AmazonS3/latest/dev/LogFormat.html

Fixes: http://tracker.ceph.com/issues/20971

Reported-by: Zhang Shaowen <zhangshaowen@cmss.chinamobile.com>
Signed-off-by: Jiaying Ren <jiaying.ren@umcloud.com>
(cherry picked from commit 96bb12a158ab899ec219d88e140499a4e27b4ba5)