src/rgw/rgw_log.cc
@@ -356,7 +356,23 @@ int rgw_log_op(RGWRados *store, RGWREST* const rest, struct req_state *s,
     set_param_str(s, "HTTP_REFERRER", entry.referrer);
   else
     set_param_str(s, "HTTP_REFERER", entry.referrer);
-  set_param_str(s, "REQUEST_URI", entry.uri);
+
+  std::string uri(s->info.env->get("REQUEST_METHOD"));
+  uri.append(" ");
+
+  uri.append(s->info.env->get("REQUEST_URI"));
+  const char* qs = s->info.env->get("QUERY_STRING");
+  if(qs && (*qs != '\0')) {
+    uri.append("?");
+    uri.append(qs);
+  }
+
+  uri.append(" ");
+  uri.append("HTTP/");
+  uri.append(s->info.env->get("HTTP_VERSION"));
+
+  entry.uri = std::move(uri);
+
   set_param_str(s, "REQUEST_METHOD", entry.op);
 
   /* custom header logging */
